// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.models;

option go_package = "infra/unifiedfleet/api/v1/models;ufspb";

import "google/api/resource.proto";

// Location of the asset(Rack/Machine) in the lab
// For Browser machine, lab and rack are the only field to fill in.
// The fine-grained location is mainly for OS machine as we care about rack,
// row, shelf.
message Location {
  reserved 1;
  reserved "lab";
  // Each lab has many aisles.
  // This field refers to the aisle number/name in the lab.
  string aisle = 2;
  // Each aisle has many rows.
  // This field refers to the row number/name in the aisle.
  string row = 3;
  // Each row has many racks.
  // This field refers to the rack number/name in the row.
  string rack = 4 [(google.api.resource_reference) = {
    type: "unified-fleet-system.appspot.com/Rack"
  }];
  // The position of the rack in the row.
  string rack_number = 5;
  // Each rack has many shelves.
  // This field refers to the shelf number/name in the rack.
  string shelf = 6;
  // Each shelf has many positions where assets can be placed.
  // This field refers to the position number/name in the shelf
  string position = 7;

  // A string descriptor representing location. This can be to
  // store barcode values for location or user defined names.
  string barcode_name = 8;

  // Different zones in the chrome org. Required.
  Zone zone = 9;

  // CabinetAssetID of the rack/cabinet the asset is mounted in.
  // This is used as a unique identifier in Nlyte for cabinets.
  int32 rack_id = 10;

  // LocationGroupID of the current lab in Nlyte.
  int32 lab_id = 11;

  // Format: “Room_Name (City,Building,Floor)”. Lab is interchangeable with
  // Room.
  string full_location_name = 12;
}

// Lab refers to the different Labs under chrome org
// More labs to be added later if needed
// Next tag: 12
enum Lab {
  LAB_UNSPECIFIED = 0;
  LAB_CHROME_ATLANTA = 1;
  LAB_CHROMEOS_SANTIAM = 2;
  LAB_CHROMEOS_DESTINY = 3;
  LAB_CHROMEOS_PROMETHEUS = 4;
  LAB_CHROMEOS_ATLANTIS = 5;
  LAB_CHROMEOS_LINDAVISTA = 6;
  LAB_DATACENTER_ATL97 = 7;
  LAB_DATACENTER_IAD97 = 8;
  LAB_DATACENTER_MTV96 = 9;
  LAB_DATACENTER_MTV97 = 10;
  LAB_DATACENTER_FUCHSIA = 11;
}

// Zone refers to the different network zones under chrome org
// Next tag: 27
enum Zone {
  ZONE_UNSPECIFIED = 0;
  ZONE_ATLANTA = 1;             // "atl" Building ? Room ?
  ZONE_CHROMEOS1 = 2;           // "chromeos1" // US-MTV-1600 // Santiam
  ZONE_CHROMEOS2 = 3 [deprecated = true]; // DEPRECATED "chromeos2" // US-MTV-2081 // Atlantis
  ZONE_CHROMEOS3 = 4;           // "chromeos3" // US-MTV-946 // Lindavista
  ZONE_CHROMEOS4 = 5 [deprecated = true]; // DEPRECATED "chromeos4" // US-MTV-2081 // Destiny
  ZONE_CHROMEOS5 = 6;           // "chromeos5" // US-MTV-946 // Lindavista
  ZONE_CHROMEOS6 = 7;           // "chromeos6" // US-MTV-2081 // Prometheus
  ZONE_CHROMEOS7 = 8;           // "chromeos7" // US-MTV-946 // Lindavista
  ZONE_CHROMEOS15 = 10;         // "chromeos15" // US-MTV-946 // Lindavista
  ZONE_ATL97 = 11;              // "atl97" //  US-ATL-MET1 // Room ?
  ZONE_IAD97 = 12;              // "iad97" // Building ? Room ?
  ZONE_MTV96 = 13;              // "mtv96" // US-MTV-41 // 1-1M0
  ZONE_MTV97 = 14;              // "mtv97" // US-MTV-1950 // 1-144
  ZONE_FUCHSIA = 15;            // "lab01" // Building ? Room ?
  ZONE_CROS_GOOGLER_DESK = 16;  // "desk" // For cros assets given to googlers
  ZONE_MTV1950_TESTING =
      17;  // "mtv1950" // temporary zone for testing cros assets in gTransit
  ZONE_SATLAB = 18;  // "satlab" // zone for satlab duts
  ZONE_BROWSER_GOOGLER_DESK =
      19;                    // "desk" // for browser assets given to googlers
  ZONE_JETSTREAM_B946 = 20;  // US-MTV-946-1-1E1
  ZONE_SFO36_NETWORK = 22;   // "sfo36_network" // US-PAO-EM25 // Room 115
  ZONE_SFO36_BROWSER = 23;   // "sfo36_browser" // US-PAO-EM25 // Room 105
  ZONE_SFO36_OS = 24;        // "sfo36_os" // US-PAO-EM25 // Room 114, 116, 117
  ZONE_SFO36_OS_CHROMIUM = 21; // "sfo36_os_chromium" // US-PAO-EM25 // CRE199-204
  ZONE_SFP_SFPTEST = 25;    // "sfp_sfptest" // Zone for SfP assets for partner `sfptest`
  ZONE_IAD65_OS = 26;       // "iad65_os" // Zone for datacenter site IAD65
  ZONE_SFP_CROSTEST = 27; // "sfp_crostest" // Zone for SfP assets for partner `crostest`
}
